--- a/src/css/style4.css
+++ b/src/css/style4.css
@@ -104,7 +104,7 @@ i, span {
 #sidebar .sidebar-header {
     padding: 20px;
     background: #000000;
-    background-image: url("../img/logo.png");
+    background-image: url("/img/logo.png");
     height: 200px;
     background-size: cover;
     background-position: center;
