--- a/src/Page/LoginPage/login.css
+++ b/src/Page/LoginPage/login.css
@@ -1,6 +1,8 @@
 .login-container{
     background-image: url("/img/Login/login.jpg") !important;
     background-size: cover !important;
+    background-repeat: no-repeat;
+   
 }
 
 .myform{
